--- a/notebook/01 - Temel Numpy ve Notebook İşlemleri.ipynb
+++ b/notebook/01 - Temel Numpy ve Notebook İşlemleri.ipynb
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -148,9 +148,9 @@
     "\n",
     "y = np.array([\n",
     "    [1, 2, 3]\n",
-    "]).T\n",
+    "])\n",
     "\n",
-    "print X.dot(y)"
+    "print X.dot(y.T)"
    ]
   },
   {
@@ -378,9 +378,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:datascience]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "conda-env-datascience-py"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -392,7 +392,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
