--- a/notebook/5 - Çapraz Geçerlilik Ve Parametre Optimizasyonu.ipynb
+++ b/notebook/5 - Çapraz Geçerlilik Ve Parametre Optimizasyonu.ipynb
@@ -262,15 +262,15 @@
      "text": [
       "Skor tipi: precision\n",
       "Parametreler:\n",
-      "{'kernel': 'rbf', 'C': 10, 'gamma': 0.001}\n",
-      "Eğitim Skoru: 0.98751447\n",
-      "Test Skoru: 0.99074074\n",
+      "{'kernel': 'rbf', 'C': 10, 'gamma': 0.0005}\n",
+      "Eğitim Skoru: 0.98929352\n",
+      "Test Skoru: 0.99259259\n",
       "\n",
       "Skor tipi: recall\n",
       "Parametreler:\n",
-      "{'kernel': 'rbf', 'C': 10, 'gamma': 0.001}\n",
-      "Eğitim Skoru: 0.98759195\n",
-      "Test Skoru: 0.99074074\n",
+      "{'kernel': 'rbf', 'C': 10, 'gamma': 0.0005}\n",
+      "Eğitim Skoru: 0.98907904\n",
+      "Test Skoru: 0.99259259\n",
       "\n"
      ]
     }
@@ -324,24 +324,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tahmin edilen değer: 1\n",
+      "Tahmin edilen değer: 5\n",
       "\n",
-      "Sonucun 0 olma ihtimali: %0.06\n",
-      "Sonucun 1 olma ihtimali: %97.56\n",
-      "Sonucun 2 olma ihtimali: %0.27\n",
-      "Sonucun 3 olma ihtimali: %0.13\n",
-      "Sonucun 4 olma ihtimali: %0.12\n",
-      "Sonucun 5 olma ihtimali: %0.12\n",
-      "Sonucun 6 olma ihtimali: %0.12\n",
-      "Sonucun 7 olma ihtimali: %0.13\n",
-      "Sonucun 8 olma ihtimali: %1.40\n",
-      "Sonucun 9 olma ihtimali: %0.09\n"
+      "Sonucun 0 olma ihtimali: %0.43\n",
+      "Sonucun 1 olma ihtimali: %0.16\n",
+      "Sonucun 2 olma ihtimali: %0.15\n",
+      "Sonucun 3 olma ihtimali: %0.43\n",
+      "Sonucun 4 olma ihtimali: %0.10\n",
+      "Sonucun 5 olma ihtimali: %95.58\n",
+      "Sonucun 6 olma ihtimali: %0.25\n",
+      "Sonucun 7 olma ihtimali: %0.10\n",
+      "Sonucun 8 olma ihtimali: %0.23\n",
+      "Sonucun 9 olma ihtimali: %2.56\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fa737ae1e50>"
+       "<matplotlib.image.AxesImage at 0x7f12d952b5d0>"
       ]
      },
      "execution_count": 11,
@@ -350,9 +350,9 @@
     },
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAPgAAAD8CAYAAABaQGkdAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAACoBJREFUeJzt3d+LHfUZx/HPp9HSWm0WmrRINnYDSkAK2cgSkBRJI5ZY\nRXPRiwQUGgq5UgwtiPau/4DYiyJI1A2YKm38iVjFomKF1rqJm9ZkY0nDlmzQZmMJ/rhoiD692AlE\nSdk5OfOdmX36fsHinrOHM89R3s6cs7PzdUQIQE5f6XoAAOUQOJAYgQOJETiQGIEDiRE4kBiBA4kR\nOJAYgQOJXVLiSVesWBFjY2MlnrpTH374Yavbm52dbW1by5cvb21bV199dWvbymp2dlanTp3yYo8r\nEvjY2JimpqZKPHWnJicnW93ejh07WtvWpk2bWtvWs88+29q2spqYmKj1OA7RgcQIHEiMwIHECBxI\njMCBxAgcSIzAgcQIHEisVuC2t9h+z/ZR2/eVHgpAMxYN3PYySb+WdLOkayVtt31t6cEADK/OHnyD\npKMRcSwizkh6UtLtZccC0IQ6ga+SdPy823PVfQB6rrEP2WzvtD1le2p+fr6ppwUwhDqBn5C0+rzb\no9V9XxARD0fERERMrFy5sqn5AAyhTuBvS7rG9hrbX5W0TdLzZccC0IRF/x48Is7avkvSy5KWSXo0\nIg4VnwzA0Gpd8CEiXpT0YuFZADSMM9mAxAgcSIzAgcQIHEiMwIHECBxIjMCBxAgcSKzIyiZZTU9P\ndz1CMc8991xr22pzZZOtW7e2tq0+Yg8OJEbgQGIEDiRG4EBiBA4kRuBAYgQOJEbgQGIEDiRWZ2WT\nR22ftP1uGwMBaE6dPfikpC2F5wBQwKKBR8Qbkv7dwiwAGsZ7cCAxli4CEmsscJYuAvqHQ3QgsTq/\nJntC0p8krbU9Z/un5ccC0IQ6a5Ntb2MQAM3jEB1IjMCBxAgcSIzAgcQIHEiMwIHECBxIjMCBxFi6\naAAjIyNdj5AC/x7bwx4cSIzAgcQIHEiMwIHECBxIjMCBxAgcSIzAgcQIHEiMwIHE6lx0cbXt12wf\ntn3I9j1tDAZgeHXORT8r6ecRccD2FZL2234lIg4Xng3AkOqsTfZ+RByovv9Y0oykVaUHAzC8gd6D\n2x6TtF7SWxf4GUsXAT1TO3Dbl0t6StKuiPjoyz9n6SKgf2oFbvtSLcS9NyKeLjsSgKbU+RTdkh6R\nNBMRD5QfCUBT6uzBN0q6U9Jm29PV148KzwWgAXXWJntTkluYBUDDOJMNSIzAgcQIHEiMwIHECBxI\njMCBxAgcSIzAgcRYm2wAs7OzXY9QzLp161rb1qZNm1rb1v879uBAYgQOJEbgQGIEDiRG4EBiBA4k\nRuBAYgQOJEbgQGJ1Lrr4Ndt/sX2wWrrol20MBmB4dU5V/Y+kzRHxSXX55Ddt/z4i/lx4NgBDqnPR\nxZD0SXXz0uorSg4FoBl1Fz5YZnta0klJr0QESxcBS0CtwCPis4gYlzQqaYPt713gMSxdBPTMQJ+i\nR8RpSa9J2lJmHABNqvMp+krbI9X3X5d0k6QjpQcDMLw6n6JfKWmP7WVa+B/CbyPihbJjAWhCnU/R\n/6qFNcEBLDGcyQYkRuBAYgQOJEbgQGIEDiRG4EBiBA4kRuBAYixdNIDp6emuRyhmZGSk6xFQAHtw\nIDECBxIjcCAxAgcSI3AgMQIHEiNwIDECBxIjcCCx2oFX10Z/xzbXYwOWiEH24PdImik1CIDm1V3Z\nZFTSLZJ2lx0HQJPq7sEflHSvpM8LzgKgYXUWPrhV0smI2L/I41ibDOiZOnvwjZJusz0r6UlJm20/\n/uUHsTYZ0D+LBh4R90fEaESMSdom6dWIuKP4ZACGxu/BgcQGuqJLRLwu6fUikwBoHHtwIDECBxIj\ncCAxAgcSI3AgMQIHEiNwIDECBxJj6aIBjI+Pt7q9gwcPtrattl8b2sEeHEiMwIHECBxIjMCBxAgc\nSIzAgcQIHEiMwIHECBxIrNaZbNUVVT+W9JmksxExUXIoAM0Y5FTVH0TEqWKTAGgch+hAYnUDD0l/\nsL3f9s6SAwFoTt1D9O9HxAnb35b0iu0jEfHG+Q+owt8pSVdddVXDYwK4GLX24BFxovrnSUnPSNpw\ngcewdBHQM3UWH/yG7SvOfS/ph5LeLT0YgOHVOUT/jqRnbJ97/G8i4qWiUwFoxKKBR8QxSetamAVA\nw/g1GZAYgQOJETiQGIEDiRE4kBiBA4kROJAYgQOJsXTRAEZGRroeoZjTp093PQIKYA8OJEbgQGIE\nDiRG4EBiBA4kRuBAYgQOJEbgQGIEDiRWK3DbI7b32T5ie8b29aUHAzC8uqeq/krSSxHxY9tflXRZ\nwZkANGTRwG0vl3SDpJ9IUkSckXSm7FgAmlDnEH2NpHlJj9l+x/bu6vroAHquTuCXSLpO0kMRsV7S\np5Lu+/KDbO+0PWV7an5+vuExAVyMOoHPSZqLiLeq2/u0EPwXsHQR0D+LBh4RH0g6bnttddeNkg4X\nnQpAI+p+in63pL3VJ+jHJO0oNxKAptQKPCKmJU0UngVAwziTDUiMwIHECBxIjMCBxAgcSIzAgcQI\nHEiMwIHECBxIjLXJBrB169ZWtzc5Odnatvbs2dPatnbt2tXatsbHx1vbVh+xBwcSI3AgMQIHEiNw\nIDECBxIjcCAxAgcSI3AgMQIHEls0cNtrbU+f9/WR7fZORQJw0RY9VTUi3pM0Lkm2l0k6IemZwnMB\naMCgh+g3SvpHRPyzxDAAmjVo4NskPXGhH7B0EdA/tQOvFj24TdLvLvRzli4C+meQPfjNkg5ExL9K\nDQOgWYMEvl3/4/AcQD/VCrxaD/wmSU+XHQdAk+quTfappG8VngVAwziTDUiMwIHECBxIjMCBxAgc\nSIzAgcQIHEiMwIHEHBHNP6k9L2nQPyldIelU48P0Q9bXxuvqzncjYtG/6ioS+MWwPRURE13PUULW\n18br6j8O0YHECBxIrE+BP9z1AAVlfW28rp7rzXtwAM3r0x4cQMN6EbjtLbbfs33U9n1dz9ME26tt\nv2b7sO1Dtu/peqYm2V5m+x3bL3Q9S5Nsj9jeZ/uI7Rnb13c90zA6P0SvrrX+dy1cMWZO0tuStkfE\n4U4HG5LtKyVdGREHbF8hab+krUv9dZ1j+2eSJiR9MyJu7XqeptjeI+mPEbG7utDoZRFxuuu5LlYf\n9uAbJB2NiGMRcUbSk5Ju73imoUXE+xFxoPr+Y0kzklZ1O1UzbI9KukXS7q5naZLt5ZJukPSIJEXE\nmaUct9SPwFdJOn7e7TklCeEc22OS1kt6q9tJGvOgpHslfd71IA1bI2le0mPV24/d1fUIl6w+BJ6a\n7cslPSVpV0R81PU8w7J9q6STEbG/61kKuETSdZIeioj1kj6VtKQ/E+pD4CckrT7v9mh135Jn+1It\nxL03IrJckXajpNtsz2rh7dRm2493O1Jj5iTNRcS5I619Wgh+yepD4G9Lusb2mupDjW2Snu94pqHZ\nthbey81ExANdz9OUiLg/IkYjYkwL/61ejYg7Oh6rERHxgaTjttdWd90oaUl/KFrrssklRcRZ23dJ\nelnSMkmPRsShjsdqwkZJd0r6m+3p6r5fRMSLHc6Exd0taW+1szkmaUfH8wyl81+TASinD4foAAoh\ncCAxAgcSI3AgMQIHEiNwIDECBxIjcCCx/wLkbJQ6E2ur9AAAAABJRU5ErkJggg==\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAPgAAAD8CAYAAABaQGkdAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAACsdJREFUeJzt3d+LXPUZx/HPp6vSWq0DTVokG7MBS0AK3ZUlICliI5ZY\nRXPRiwQUIoVcKS4tiPYq/QfEXhRBoq5gqrTxJ2IViwYrtNZNTFuTjSUNW7JBmw1l8cdFQuLTiz2B\nqClzNnPOd2Ye3y9Y3B/Dfp9JfOecmZ09X0eEAOT0tX4PAKA9BA4kRuBAYgQOJEbgQGIEDiRG4EBi\nBA4kRuBAYhe18U1XrFgRY2NjbXzrLzlz5kyRdSTp6NGjxdaSpJMnTxZdr5SRkZFia1199dXF1ipp\nbm5OJ06ccLfbtRL42NiYZmZm2vjWX7K4uFhkHUmampoqtpa09JeYUafTKbbW888/X2ytkiYnJ2vd\njlN0IDECBxIjcCAxAgcSI3AgMQIHEiNwIDECBxKrFbjtTbbft33Y9v1tDwWgGV0Dtz0i6TeSbpZ0\njaSttq9pezAAvatzBF8v6XBEHImIU5KelnR7u2MBaEKdwFdJOve3LOarzwEYcI09yWZ7u+0Z2zML\nCwtNfVsAPagT+DFJq8/5eLT63OdExCMRMRkRkytXrmxqPgA9qBP4O5K+Z3ut7UskbZH0YrtjAWhC\n198Hj4jTtu+W9KqkEUmPRcSB1icD0LNaF3yIiJclvdzyLAAaxivZgMQIHEiMwIHECBxIjMCBxAgc\nSIzAgcQIHEislZ1NSpqeni621p49e4qtJUnbtm0rul4ppba1AkdwIDUCBxIjcCAxAgcSI3AgMQIH\nEiNwIDECBxIjcCCxOjubPGb7uO33SgwEoDl1juDTkja1PAeAFnQNPCLelPTfArMAaBiPwYHE2LoI\nSKyxwNm6CBg8nKIDidX5MdlTkv4saZ3teds/a38sAE2oszfZ1hKDAGgep+hAYgQOJEbgQGIEDiRG\n4EBiBA4kRuBAYgQOJDb0WxeVND4+XnS9TqdTbK0bbrih2Fql/xy/yjiCA4kROJAYgQOJETiQGIED\niRE4kBiBA4kROJAYgQOJETiQWJ2LLq62/Ybtg7YP2L63xGAAelfnteinJf0iIvbZvlzSXtuvRcTB\nlmcD0KM6e5N9EBH7qvc/ljQraVXbgwHo3bIeg9sekzQh6e3zfI2ti4ABUztw25dJekbSVER89MWv\ns3URMHhqBW77Yi3FvSsinm13JABNqfMsuiU9Kmk2Ih5sfyQATalzBN8g6U5JG23vr95+0vJcABpQ\nZ2+ytyS5wCwAGsYr2YDECBxIjMCBxAgcSIzAgcQIHEiMwIHECBxIbOj3JltcXCy21gsvvFBsLUma\nm5srttb09HSxtTZv3lxsrR07dhRbaxBxBAcSI3AgMQIHEiNwIDECBxIjcCAxAgcSI3AgMQIHEqtz\n0cWv2/6r7b9VWxf9qsRgAHpX56WqJyVtjIhPqssnv2X7DxHxl5ZnA9CjOhddDEmfVB9eXL1Fm0MB\naEbdjQ9GbO+XdFzSaxHB1kXAEKgVeESciYhxSaOS1tv+/nluw9ZFwIBZ1rPoEbEo6Q1Jm9oZB0CT\n6jyLvtJ2p3r/G5JuknSo7cEA9K7Os+hXSnrC9oiW/kH4XUS81O5YAJpQ51n0v2tpT3AAQ4ZXsgGJ\nETiQGIEDiRE4kBiBA4kROJAYgQOJETiQ2NBvXTQ1NVVsrZJb7kjS+Ph4sbVKbgFV8n6VXEsq//9I\nNxzBgcQIHEiMwIHECBxIjMCBxAgcSIzAgcQIHEiMwIHEagdeXRv9Xdtcjw0YEss5gt8rabatQQA0\nr+7OJqOSbpG0s91xADSp7hH8IUn3SfqsxVkANKzOxge3SjoeEXu73I69yYABU+cIvkHSbbbnJD0t\naaPtJ794I/YmAwZP18Aj4oGIGI2IMUlbJL0eEXe0PhmAnvFzcCCxZV3RJSL2SNrTyiQAGscRHEiM\nwIHECBxIjMCBxAgcSIzAgcQIHEiMwIHEhn7rok6nU2yt0tvglFTyz3F6errYWjt27Ci2lsTWRQAK\nInAgMQIHEiNwIDECBxIjcCAxAgcSI3AgMQIHEqv1SrbqiqofSzoj6XRETLY5FIBmLOelqj+KiBOt\nTQKgcZyiA4nVDTwk/dH2Xtvb2xwIQHPqnqL/MCKO2f6OpNdsH4qIN8+9QRX+dkm66qqrGh4TwIWo\ndQSPiGPVf49Lek7S+vPchq2LgAFTZ/PBb9q+/Oz7kn4s6b22BwPQuzqn6N+V9Jzts7f/bUS80upU\nABrRNfCIOCLpBwVmAdAwfkwGJEbgQGIEDiRG4EBiBA4kRuBAYgQOJEbgQGJDv3VRSaW3pSm57U7J\nbZlKbl30VccRHEiMwIHECBxIjMCBxAgcSIzAgcQIHEiMwIHECBxIrFbgtju2d9s+ZHvW9nVtDwag\nd3VfqvprSa9ExE9tXyLp0hZnAtCQroHbvkLS9ZK2SVJEnJJ0qt2xADShzin6WkkLkh63/a7tndX1\n0QEMuDqBXyTpWkkPR8SEpE8l3f/FG9nebnvG9szCwkLDYwK4EHUCn5c0HxFvVx/v1lLwn8PWRcDg\n6Rp4RHwo6ajtddWnbpR0sNWpADSi7rPo90jaVT2DfkTSXe2NBKAptQKPiP2SJlueBUDDeCUbkBiB\nA4kROJAYgQOJETiQGIEDiRE4kBiBA4kROJAYe5MtQ6fTKbrexMRE0fVKWbNmTbG1vur7oHEEBxIj\ncCAxAgcSI3AgMQIHEiNwIDECBxIjcCAxAgcS6xq47XW295/z9pHtqRLDAehN15eqRsT7ksYlyfaI\npGOSnmt5LgANWO4p+o2S/hUR/25jGADNWm7gWyQ9db4vsHURMHhqB15tenCbpN+f7+tsXQQMnuUc\nwW+WtC8i/tPWMACatZzAt+r/nJ4DGEy1Aq/2A79J0rPtjgOgSXX3JvtU0rdbngVAw3glG5AYgQOJ\nETiQGIEDiRE4kBiBA4kROJAYgQOJOSKa/6b2gqTl/krpCkknGh9mMGS9b9yv/lkTEV1/q6uVwC+E\n7ZmImOz3HG3Iet+4X4OPU3QgMQIHEhukwB/p9wAtynrfuF8DbmAegwNo3iAdwQE0bCACt73J9vu2\nD9u+v9/zNMH2attv2D5o+4Dte/s9U5Nsj9h+1/ZL/Z6lSbY7tnfbPmR71vZ1/Z6pF30/Ra+utf5P\nLV0xZl7SO5K2RsTBvg7WI9tXSroyIvbZvlzSXkmbh/1+nWX755ImJX0rIm7t9zxNsf2EpD9FxM7q\nQqOXRsRiv+e6UINwBF8v6XBEHImIU5KelnR7n2fqWUR8EBH7qvc/ljQraVV/p2qG7VFJt0ja2e9Z\nmmT7CknXS3pUkiLi1DDHLQ1G4KskHT3n43klCeEs22OSJiS93d9JGvOQpPskfdbvQRq2VtKCpMer\nhx87q+sRDq1BCDw125dJekbSVER81O95emX7VknHI2Jvv2dpwUWSrpX0cERMSPpU0lA/JzQIgR+T\ntPqcj0erzw092xdrKe5dEZHlirQbJN1me05LD6c22n6yvyM1Zl7SfEScPdParaXgh9YgBP6OpO/Z\nXls9qbFF0ot9nqlntq2lx3KzEfFgv+dpSkQ8EBGjETGmpb+r1yPijj6P1YiI+FDSUdvrqk/dKGmo\nnxStddnkNkXEadt3S3pV0oikxyLiQJ/HasIGSXdK+oft/dXnfhkRL/dxJnR3j6Rd1cHmiKS7+jxP\nT/r+YzIA7RmEU3QALSFwIDECBxIjcCAxAgcSI3AgMQIHEiNwILH/AaGJpyRt+YM3AAAAAElFTkSu\nQmCC\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7fa7378f5a50>"
+       "<matplotlib.figure.Figure at 0x7f12d944f390>"
       ]
      },
      "metadata": {},
@@ -387,7 +387,7 @@
     {
      "data": {
       "text/plain": [
-       "['sayi_tahmin.pkl']"
+       "['data/sayi_tahmin.pkl']"
       ]
      },
      "execution_count": 12,
@@ -419,24 +419,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tahmin edilen değer: 1\n",
+      "Tahmin edilen değer: 5\n",
       "\n",
-      "Sonucun 0 olma ihtimali: %0.06\n",
-      "Sonucun 1 olma ihtimali: %97.56\n",
-      "Sonucun 2 olma ihtimali: %0.27\n",
-      "Sonucun 3 olma ihtimali: %0.13\n",
-      "Sonucun 4 olma ihtimali: %0.12\n",
-      "Sonucun 5 olma ihtimali: %0.12\n",
-      "Sonucun 6 olma ihtimali: %0.12\n",
-      "Sonucun 7 olma ihtimali: %0.13\n",
-      "Sonucun 8 olma ihtimali: %1.40\n",
-      "Sonucun 9 olma ihtimali: %0.09\n"
+      "Sonucun 0 olma ihtimali: %0.43\n",
+      "Sonucun 1 olma ihtimali: %0.16\n",
+      "Sonucun 2 olma ihtimali: %0.15\n",
+      "Sonucun 3 olma ihtimali: %0.43\n",
+      "Sonucun 4 olma ihtimali: %0.10\n",
+      "Sonucun 5 olma ihtimali: %95.58\n",
+      "Sonucun 6 olma ihtimali: %0.25\n",
+      "Sonucun 7 olma ihtimali: %0.10\n",
+      "Sonucun 8 olma ihtimali: %0.23\n",
+      "Sonucun 9 olma ihtimali: %2.56\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fa737da5550>"
+       "<matplotlib.image.AxesImage at 0x7f12d9831090>"
       ]
      },
      "execution_count": 13,
@@ -445,9 +445,9 @@
     },
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAPgAAAD8CAYAAABaQGkdAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAACoBJREFUeJzt3d+LHfUZx/HPp9HSWm0WmrRINnYDSkAK2cgSkBRJI5ZY\nRXPRiwQUGgq5UgwtiPau/4DYiyJI1A2YKm38iVjFomKF1rqJm9ZkY0nDlmzQZmMJ/rhoiD692AlE\nSdk5OfOdmX36fsHinrOHM89R3s6cs7PzdUQIQE5f6XoAAOUQOJAYgQOJETiQGIEDiRE4kBiBA4kR\nOJAYgQOJXVLiSVesWBFjY2MlnrpTH374Yavbm52dbW1by5cvb21bV199dWvbymp2dlanTp3yYo8r\nEvjY2JimpqZKPHWnJicnW93ejh07WtvWpk2bWtvWs88+29q2spqYmKj1OA7RgcQIHEiMwIHECBxI\njMCBxAgcSIzAgcQIHEisVuC2t9h+z/ZR2/eVHgpAMxYN3PYySb+WdLOkayVtt31t6cEADK/OHnyD\npKMRcSwizkh6UtLtZccC0IQ6ga+SdPy823PVfQB6rrEP2WzvtD1le2p+fr6ppwUwhDqBn5C0+rzb\no9V9XxARD0fERERMrFy5sqn5AAyhTuBvS7rG9hrbX5W0TdLzZccC0IRF/x48Is7avkvSy5KWSXo0\nIg4VnwzA0Gpd8CEiXpT0YuFZADSMM9mAxAgcSIzAgcQIHEiMwIHECBxIjMCBxAgcSKzIyiZZTU9P\ndz1CMc8991xr22pzZZOtW7e2tq0+Yg8OJEbgQGIEDiRG4EBiBA4kRuBAYgQOJEbgQGIEDiRWZ2WT\nR22ftP1uGwMBaE6dPfikpC2F5wBQwKKBR8Qbkv7dwiwAGsZ7cCAxli4CEmsscJYuAvqHQ3QgsTq/\nJntC0p8krbU9Z/un5ccC0IQ6a5Ntb2MQAM3jEB1IjMCBxAgcSIzAgcQIHEiMwIHECBxIjMCBxFi6\naAAjIyNdj5AC/x7bwx4cSIzAgcQIHEiMwIHECBxIjMCBxAgcSIzAgcQIHEiMwIHE6lx0cbXt12wf\ntn3I9j1tDAZgeHXORT8r6ecRccD2FZL2234lIg4Xng3AkOqsTfZ+RByovv9Y0oykVaUHAzC8gd6D\n2x6TtF7SWxf4GUsXAT1TO3Dbl0t6StKuiPjoyz9n6SKgf2oFbvtSLcS9NyKeLjsSgKbU+RTdkh6R\nNBMRD5QfCUBT6uzBN0q6U9Jm29PV148KzwWgAXXWJntTkluYBUDDOJMNSIzAgcQIHEiMwIHECBxI\njMCBxAgcSIzAgcRYm2wAs7OzXY9QzLp161rb1qZNm1rb1v879uBAYgQOJEbgQGIEDiRG4EBiBA4k\nRuBAYgQOJEbgQGJ1Lrr4Ndt/sX2wWrrol20MBmB4dU5V/Y+kzRHxSXX55Ddt/z4i/lx4NgBDqnPR\nxZD0SXXz0uorSg4FoBl1Fz5YZnta0klJr0QESxcBS0CtwCPis4gYlzQqaYPt713gMSxdBPTMQJ+i\nR8RpSa9J2lJmHABNqvMp+krbI9X3X5d0k6QjpQcDMLw6n6JfKWmP7WVa+B/CbyPihbJjAWhCnU/R\n/6qFNcEBLDGcyQYkRuBAYgQOJEbgQGIEDiRG4EBiBA4kRuBAYixdNIDp6emuRyhmZGSk6xFQAHtw\nIDECBxIjcCAxAgcSI3AgMQIHEiNwIDECBxIjcCCx2oFX10Z/xzbXYwOWiEH24PdImik1CIDm1V3Z\nZFTSLZJ2lx0HQJPq7sEflHSvpM8LzgKgYXUWPrhV0smI2L/I41ibDOiZOnvwjZJusz0r6UlJm20/\n/uUHsTYZ0D+LBh4R90fEaESMSdom6dWIuKP4ZACGxu/BgcQGuqJLRLwu6fUikwBoHHtwIDECBxIj\ncCAxAgcSI3AgMQIHEiNwIDECBxJj6aIBjI+Pt7q9gwcPtrattl8b2sEeHEiMwIHECBxIjMCBxAgc\nSIzAgcQIHEiMwIHECBxIrNaZbNUVVT+W9JmksxExUXIoAM0Y5FTVH0TEqWKTAGgch+hAYnUDD0l/\nsL3f9s6SAwFoTt1D9O9HxAnb35b0iu0jEfHG+Q+owt8pSVdddVXDYwK4GLX24BFxovrnSUnPSNpw\ngcewdBHQM3UWH/yG7SvOfS/ph5LeLT0YgOHVOUT/jqRnbJ97/G8i4qWiUwFoxKKBR8QxSetamAVA\nw/g1GZAYgQOJETiQGIEDiRE4kBiBA4kROJAYgQOJsXTRAEZGRroeoZjTp093PQIKYA8OJEbgQGIE\nDiRG4EBiBA4kRuBAYgQOJEbgQGIEDiRWK3DbI7b32T5ie8b29aUHAzC8uqeq/krSSxHxY9tflXRZ\nwZkANGTRwG0vl3SDpJ9IUkSckXSm7FgAmlDnEH2NpHlJj9l+x/bu6vroAHquTuCXSLpO0kMRsV7S\np5Lu+/KDbO+0PWV7an5+vuExAVyMOoHPSZqLiLeq2/u0EPwXsHQR0D+LBh4RH0g6bnttddeNkg4X\nnQpAI+p+in63pL3VJ+jHJO0oNxKAptQKPCKmJU0UngVAwziTDUiMwIHECBxIjMCBxAgcSIzAgcQI\nHEiMwIHECBxIjLXJBrB169ZWtzc5Odnatvbs2dPatnbt2tXatsbHx1vbVh+xBwcSI3AgMQIHEiNw\nIDECBxIjcCAxAgcSI3AgMQIHEls0cNtrbU+f9/WR7fZORQJw0RY9VTUi3pM0Lkm2l0k6IemZwnMB\naMCgh+g3SvpHRPyzxDAAmjVo4NskPXGhH7B0EdA/tQOvFj24TdLvLvRzli4C+meQPfjNkg5ExL9K\nDQOgWYMEvl3/4/AcQD/VCrxaD/wmSU+XHQdAk+quTfappG8VngVAwziTDUiMwIHECBxIjMCBxAgc\nSIzAgcQIHEiMwIHEHBHNP6k9L2nQPyldIelU48P0Q9bXxuvqzncjYtG/6ioS+MWwPRURE13PUULW\n18br6j8O0YHECBxIrE+BP9z1AAVlfW28rp7rzXtwAM3r0x4cQMN6EbjtLbbfs33U9n1dz9ME26tt\nv2b7sO1Dtu/peqYm2V5m+x3bL3Q9S5Nsj9jeZ/uI7Rnb13c90zA6P0SvrrX+dy1cMWZO0tuStkfE\n4U4HG5LtKyVdGREHbF8hab+krUv9dZ1j+2eSJiR9MyJu7XqeptjeI+mPEbG7utDoZRFxuuu5LlYf\n9uAbJB2NiGMRcUbSk5Ju73imoUXE+xFxoPr+Y0kzklZ1O1UzbI9KukXS7q5naZLt5ZJukPSIJEXE\nmaUct9SPwFdJOn7e7TklCeEc22OS1kt6q9tJGvOgpHslfd71IA1bI2le0mPV24/d1fUIl6w+BJ6a\n7cslPSVpV0R81PU8w7J9q6STEbG/61kKuETSdZIeioj1kj6VtKQ/E+pD4CckrT7v9mh135Jn+1It\nxL03IrJckXajpNtsz2rh7dRm2493O1Jj5iTNRcS5I619Wgh+yepD4G9Lusb2mupDjW2Snu94pqHZ\nthbey81ExANdz9OUiLg/IkYjYkwL/61ejYg7Oh6rERHxgaTjttdWd90oaUl/KFrrssklRcRZ23dJ\nelnSMkmPRsShjsdqwkZJd0r6m+3p6r5fRMSLHc6Exd0taW+1szkmaUfH8wyl81+TASinD4foAAoh\ncCAxAgcSI3AgMQIHEiNwIDECBxIjcCCx/wLkbJQ6E2ur9AAAAABJRU5ErkJggg==\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAPgAAAD8CAYAAABaQGkdAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAACsdJREFUeJzt3d+LXPUZx/HPp6vSWq0DTVokG7MBS0AK3ZUlICliI5ZY\nRXPRiwQUIoVcKS4tiPYq/QfEXhRBoq5gqrTxJ2IViwYrtNZNTFuTjSUNW7JBmw1l8cdFQuLTiz2B\nqClzNnPOd2Ye3y9Y3B/Dfp9JfOecmZ09X0eEAOT0tX4PAKA9BA4kRuBAYgQOJEbgQGIEDiRG4EBi\nBA4kRuBAYhe18U1XrFgRY2NjbXzrLzlz5kyRdSTp6NGjxdaSpJMnTxZdr5SRkZFia1199dXF1ipp\nbm5OJ06ccLfbtRL42NiYZmZm2vjWX7K4uFhkHUmampoqtpa09JeYUafTKbbW888/X2ytkiYnJ2vd\njlN0IDECBxIjcCAxAgcSI3AgMQIHEiNwIDECBxKrFbjtTbbft33Y9v1tDwWgGV0Dtz0i6TeSbpZ0\njaSttq9pezAAvatzBF8v6XBEHImIU5KelnR7u2MBaEKdwFdJOve3LOarzwEYcI09yWZ7u+0Z2zML\nCwtNfVsAPagT+DFJq8/5eLT63OdExCMRMRkRkytXrmxqPgA9qBP4O5K+Z3ut7UskbZH0YrtjAWhC\n198Hj4jTtu+W9KqkEUmPRcSB1icD0LNaF3yIiJclvdzyLAAaxivZgMQIHEiMwIHECBxIjMCBxAgc\nSIzAgcQIHEislZ1NSpqeni621p49e4qtJUnbtm0rul4ppba1AkdwIDUCBxIjcCAxAgcSI3AgMQIH\nEiNwIDECBxIjcCCxOjubPGb7uO33SgwEoDl1juDTkja1PAeAFnQNPCLelPTfArMAaBiPwYHE2LoI\nSKyxwNm6CBg8nKIDidX5MdlTkv4saZ3teds/a38sAE2oszfZ1hKDAGgep+hAYgQOJEbgQGIEDiRG\n4EBiBA4kRuBAYgQOJDb0WxeVND4+XnS9TqdTbK0bbrih2Fql/xy/yjiCA4kROJAYgQOJETiQGIED\niRE4kBiBA4kROJAYgQOJETiQWJ2LLq62/Ybtg7YP2L63xGAAelfnteinJf0iIvbZvlzSXtuvRcTB\nlmcD0KM6e5N9EBH7qvc/ljQraVXbgwHo3bIeg9sekzQh6e3zfI2ti4ABUztw25dJekbSVER89MWv\ns3URMHhqBW77Yi3FvSsinm13JABNqfMsuiU9Kmk2Ih5sfyQATalzBN8g6U5JG23vr95+0vJcABpQ\nZ2+ytyS5wCwAGsYr2YDECBxIjMCBxAgcSIzAgcQIHEiMwIHECBxIbOj3JltcXCy21gsvvFBsLUma\nm5srttb09HSxtTZv3lxsrR07dhRbaxBxBAcSI3AgMQIHEiNwIDECBxIjcCAxAgcSI3AgMQIHEqtz\n0cWv2/6r7b9VWxf9qsRgAHpX56WqJyVtjIhPqssnv2X7DxHxl5ZnA9CjOhddDEmfVB9eXL1Fm0MB\naEbdjQ9GbO+XdFzSaxHB1kXAEKgVeESciYhxSaOS1tv+/nluw9ZFwIBZ1rPoEbEo6Q1Jm9oZB0CT\n6jyLvtJ2p3r/G5JuknSo7cEA9K7Os+hXSnrC9oiW/kH4XUS81O5YAJpQ51n0v2tpT3AAQ4ZXsgGJ\nETiQGIEDiRE4kBiBA4kROJAYgQOJETiQ2NBvXTQ1NVVsrZJb7kjS+Ph4sbVKbgFV8n6VXEsq//9I\nNxzBgcQIHEiMwIHECBxIjMCBxAgcSIzAgcQIHEiMwIHEagdeXRv9Xdtcjw0YEss5gt8rabatQQA0\nr+7OJqOSbpG0s91xADSp7hH8IUn3SfqsxVkANKzOxge3SjoeEXu73I69yYABU+cIvkHSbbbnJD0t\naaPtJ794I/YmAwZP18Aj4oGIGI2IMUlbJL0eEXe0PhmAnvFzcCCxZV3RJSL2SNrTyiQAGscRHEiM\nwIHECBxIjMCBxAgcSIzAgcQIHEiMwIHEhn7rok6nU2yt0tvglFTyz3F6errYWjt27Ci2lsTWRQAK\nInAgMQIHEiNwIDECBxIjcCAxAgcSI3AgMQIHEqv1SrbqiqofSzoj6XRETLY5FIBmLOelqj+KiBOt\nTQKgcZyiA4nVDTwk/dH2Xtvb2xwIQHPqnqL/MCKO2f6OpNdsH4qIN8+9QRX+dkm66qqrGh4TwIWo\ndQSPiGPVf49Lek7S+vPchq2LgAFTZ/PBb9q+/Oz7kn4s6b22BwPQuzqn6N+V9Jzts7f/bUS80upU\nABrRNfCIOCLpBwVmAdAwfkwGJEbgQGIEDiRG4EBiBA4kRuBAYgQOJEbgQGJDv3VRSaW3pSm57U7J\nbZlKbl30VccRHEiMwIHECBxIjMCBxAgcSIzAgcQIHEiMwIHECBxIrFbgtju2d9s+ZHvW9nVtDwag\nd3VfqvprSa9ExE9tXyLp0hZnAtCQroHbvkLS9ZK2SVJEnJJ0qt2xADShzin6WkkLkh63/a7tndX1\n0QEMuDqBXyTpWkkPR8SEpE8l3f/FG9nebnvG9szCwkLDYwK4EHUCn5c0HxFvVx/v1lLwn8PWRcDg\n6Rp4RHwo6ajtddWnbpR0sNWpADSi7rPo90jaVT2DfkTSXe2NBKAptQKPiP2SJlueBUDDeCUbkBiB\nA4kROJAYgQOJETiQGIEDiRE4kBiBA4kROJAYe5MtQ6fTKbrexMRE0fVKWbNmTbG1vur7oHEEBxIj\ncCAxAgcSI3AgMQIHEiNwIDECBxIjcCAxAgcS6xq47XW295/z9pHtqRLDAehN15eqRsT7ksYlyfaI\npGOSnmt5LgANWO4p+o2S/hUR/25jGADNWm7gWyQ9db4vsHURMHhqB15tenCbpN+f7+tsXQQMnuUc\nwW+WtC8i/tPWMACatZzAt+r/nJ4DGEy1Aq/2A79J0rPtjgOgSXX3JvtU0rdbngVAw3glG5AYgQOJ\nETiQGIEDiRE4kBiBA4kROJAYgQOJOSKa/6b2gqTl/krpCkknGh9mMGS9b9yv/lkTEV1/q6uVwC+E\n7ZmImOz3HG3Iet+4X4OPU3QgMQIHEhukwB/p9wAtynrfuF8DbmAegwNo3iAdwQE0bCACt73J9vu2\nD9u+v9/zNMH2attv2D5o+4Dte/s9U5Nsj9h+1/ZL/Z6lSbY7tnfbPmR71vZ1/Z6pF30/Ra+utf5P\nLV0xZl7SO5K2RsTBvg7WI9tXSroyIvbZvlzSXkmbh/1+nWX755ImJX0rIm7t9zxNsf2EpD9FxM7q\nQqOXRsRiv+e6UINwBF8v6XBEHImIU5KelnR7n2fqWUR8EBH7qvc/ljQraVV/p2qG7VFJt0ja2e9Z\nmmT7CknXS3pUkiLi1DDHLQ1G4KskHT3n43klCeEs22OSJiS93d9JGvOQpPskfdbvQRq2VtKCpMer\nhx87q+sRDq1BCDw125dJekbSVER81O95emX7VknHI2Jvv2dpwUWSrpX0cERMSPpU0lA/JzQIgR+T\ntPqcj0erzw092xdrKe5dEZHlirQbJN1me05LD6c22n6yvyM1Zl7SfEScPdParaXgh9YgBP6OpO/Z\nXls9qbFF0ot9nqlntq2lx3KzEfFgv+dpSkQ8EBGjETGmpb+r1yPijj6P1YiI+FDSUdvrqk/dKGmo\nnxStddnkNkXEadt3S3pV0oikxyLiQJ/HasIGSXdK+oft/dXnfhkRL/dxJnR3j6Rd1cHmiKS7+jxP\nT/r+YzIA7RmEU3QALSFwIDECBxIjcCAxAgcSI3AgMQIHEiNwILH/AaGJpyRt+YM3AAAAAElFTkSu\nQmCC\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7fa7379af750>"
+       "<matplotlib.figure.Figure at 0x7f12d93af050>"
       ]
      },
      "metadata": {},
